<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SubMenu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu01">Bir</string>
    <string name="menu02">İki</string>
    <string name="menu03">Üç</string>
    <string name="menu04">Dört</string>
    <string name="menu05">Beş</string>
    <string name="menu06">Altı</string>
    <string name="menu07">Yedi</string>
    <string name="menu08">Sekiz</string>
    <string name="menu09">Dokuz</string>
    <string name="menu10">On</string>
    <string name="menu11">OnBir</string>
    <string name="menu12">Onİki</string>
    <string name="menu13">OnÜç</string>

</resources>